== Changelog

All notable changes to this project will be documented in this file

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
and this project adheres to https://semver.org/spec/v2.0.0.html[semantic versioning].

== Unreleased

=== fixes

* https://github.com/PacoVK/tapir/issues/401[#401 - Fix SPA routing issue]

=== added

* https://github.com/PacoVK/tapir/issues/408[#408 - Add Azure containerapps example]

=== changed

== 0.7.1

=== fixes

=== added

=== changed

* Dependency updates

== 0.7.0

=== fixes

=== added

=== changed

* https://github.com/PacoVK/tapir/pull/386[#386 - Outsource helm Chart to separate repository] - The helm chart is now maintained in a https://github.com/PacoVK/tapir-helm[separate repository]
*  https://github.com/PacoVK/tapir/pull/387[#387 - Use amazon corretto alpine as Docker base image]

== 0.6.3

=== fixes

* https://github.com/PacoVK/tapir/issues/360[#360 - Fix read access to registry for local storage]
* https://github.com/PacoVK/tapir/issues/364[#364 - Fix mapping of documentation reports for Elasticsearch backend]

=== added

* https://github.com/PacoVK/tapir/issues/365[#365 - support modules with nested modules]

=== changed

* https://github.com/PacoVK/tapir/issues/360[#360 - Improve UI for module and provider details page - add default values, remove protocol from source URL]

== 0.6.2

=== fixes

https://github.com/PacoVK/tapir/issues/360[#360 - Fix read access to registry for local storage]

=== added

=== changed

* With local storage did not throw the right exceptions when artefact was not found on download. Now throws a 404 and returns JSON-formatted error message.

== 0.6.1

=== fixes

=== added

=== changed

* https://github.com/PacoVK/tapir/releases/tag/0.6.1[Dependency updates]

== 0.6.0

=== fixes

=== added

=== changed

* https://github.com/PacoVK/tapir/releases/tag/0.6.0[Dependency updates]

== 0.6.0-rc1 - 2023-10-26

=== fixes

=== added
