@@ -15,7 +15,7 @@ services:
       - KEYCLOAK_ADMIN_PASSWORD=admin
 
   opensearch-node1:
-    image: opensearchproject/opensearch:2.11.1
+    image: opensearchproject/opensearch:2.14.0
     container_name: opensearch-node1
     environment:
       - cluster.name=opensearch-cluster # Name the cluster
@@ -24,6 +24,7 @@ services:
       - discovery.type=single-node
       - bootstrap.memory_lock=true # Disable JVM heap memory swapping
       - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m" # Set min and max JVM heap sizes to at least 50% of system RAM
+      - OPENSEARCH_INITIAL_ADMIN_PASSWORD=FCemx1N90nHR
     ulimits:
       memlock:
         soft: -1 # Set memlock to unlimited (no soft or hard limit)
