@@ -29,6 +29,8 @@ registry:
     backend: ${BACKEND_CONFIG:dynamodb}
     elasticsearch:
       host: ${BACKEND_ELASTICSEARCH_HOST:localhost:9200}
+      user: ${BACKEND_ELASTICSEARCH_USER}
+      password: ${BACKEND_ELASTICSEARCH_PASSWORD}
     azure:
       master-key: ${BACKEND_AZURE_MASTER_KEY:C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==}
       endpoint: ${BACKEND_AZURE_ENDPOINT:https://localhost:8081}
@@ -95,6 +97,8 @@ quarkus:
       region: ${registry.storage.s3.bucket.region}
   elasticsearch:
     hosts: ${registry.search.elasticsearch.host}
+    username: ${registry.search.elasticsearch.user}
+    password: ${registry.search.elasticsearch.password}
   http:
     auth:
       permission:
